# dagu

./: .clinerules  .codespell-ignore-words  .codespellrc  .dockerignore  .gitignore  .golangci.yml  .goreleaser.yaml  .protolint.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.alpine  Dockerfile.dev  LICENSE.md  LICENSING.md  Makefile  RD_RBAC copy.md  README.md  REFACTORING_PLAN.md  ROADMAP.md  SECURITY.md  agent.go  agent_test.go  api.v1.yaml  automata.md  automata2.md  build-window.bat  build-windows.sh  codecov.yml  compose.minimal.yaml  compose.postgres.yaml  cr.yaml  dagu-1.0.0.tgz  dagu-1.0.1.tgz  dagu-1.0.2.tgz  dagu-1.0.4.tgz  (+33 more)
docs/: .gitignore  FEATURE_ROADMAP_ISSUES copy.md  Makefile  README.md  index.md  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  restapi.md  worker-labels.md  wrangler.jsonc
docs/.vitepress/: config.js  config.mts
docs/_templates/: github_star_button.html  layout.html
docs/configurations/: advanced.md  authentication.md  deployment.md  index.md  operations.md  reference.md  remote-nodes.md  server.md
docs/design/: optional-step-names.md
docs/docs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/features/: authentication.md  bubbletea-progress.md  data-flow.md  distributed-execution.md  email-notifications.md  execution-control.md  index.md  notifications.md  opentelemetry-testing.md  opentelemetry.md  queues.md  scheduling.md  worker-labels.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/overview/: api.md  architecture.md  cli.md  contributing.md  index.md  web-ui.md
docs/reference/: api.md  changelog.md  cli.md  config.md  continue-on.md  executors.md  special-environment-variables.md  variables.md  yaml.md
docs/source/: api_token.rst  auth.rst  base_config.rst  changelog.rst  cli.rst  conf.py  config.rst  config_remote.rst  contrib.rst  docker-compose.rst  docker.rst  email.rst  examples.rst  executors.rst  faq.rst  index.rst  installation.rst  intro.rst  motivation.rst  parallel_execution.rst  quickstart.rst  rest.rst  scheduler.rst  schema.rst  special_env.rst  web_interface.rst  yaml_format.rst
docs/writing-workflows/: advanced.md  basics.md  container.md  control-flow.md  examples.md  (+7 more)
(+5092 files in other folders)
