[project]
name = "docs"
version = "0.1.0"
description = "Documentation for Dagu"
authors = [
    { name = "Yota Hamada", email = "yohamta@gmail.com" }
]
dependencies = [
    "sphinx==5.3.0",
    "sphinx-rtd-theme==2.0.0",
    "sphinx-autobuild>=2024.4.16",
    "sphinx-intl>=2.2.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[tool.rye.scripts]
build = "sphinx-build -b html -D language=en_US source/ build/html"
build-ja = "sphinx-build -b html -D language=ja source/ build/html"
gettext-ja = [
   "sphinx-build -b gettext source build/gettext",
   "sphinx-intl update -p build/gettext -l ja"
]
serve = "sphinx-autobuild --watch docs --port 8000 --open-browser --delay 1 source docs/build/html"
serve-ja = "sphinx-autobuild --watch docs --port 8000 --open-browser --delay 1 -a -b html -D language=ja source docs/build/html"
